<resources>
    <string name="app_name">WebViewAuto</string>
    <string name="key_at">\@</string>
    <string name="key_qm">\?</string>
    <string name="key_slash">\u005C</string>
    <string name="key_and">&amp;</string>
    <string name="key_backspace">\uF06E</string>
    <string name="key_menu">\uF35C</string>
    <string name="key_keyboard">\uF30C</string>
    <string name="key_enter">\uF5E0</string>
    <string name="key_submit">\uF311</string>
    <string name="key_caps">\uF30E</string>
    <string name="menu_home">Home</string>
    <string name="menu_back">Back</string>
    <string name="menu_favorites">Favorites</string>
    <string name="button_label_ok">OK</string>
    <string name="button_label_cancel">Cancel</string>
    <string name="button_label_remove">Remove</string>

</resources>
