<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/browser_url_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/url_background_color"
        android:orientation="horizontal">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/browser_url_menu"
            app:font="@font/materialdesignicons"
            android:fontFamily="@font/materialdesignicons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#ff04786d"
            android:textColor="@android:color/white"
            android:text="@string/key_menu" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/browser_url_keyboard_toggle"
            app:font="@font/materialdesignicons"
            android:fontFamily="@font/materialdesignicons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#ff04786d"
            android:textColor="@android:color/white"
            android:text="@string/key_keyboard" />

        <EditText
            android:id="@+id/browser_url_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:textColor="@color/url_text_color"
            android:ems="10"
            android:text="" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/browser_url_backspace"
            app:font="@font/materialdesignicons"
            android:fontFamily="@font/materialdesignicons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#ff04786d"
            android:textColor="@android:color/white"
            android:text="@string/key_backspace" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/browser_url_ok"
            app:font="@font/materialdesignicons"
            android:fontFamily="@font/materialdesignicons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#ff04786d"
            android:textColor="@android:color/white"
            android:text="@string/key_enter" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/browser_url_submit"
            app:font="@font/materialdesignicons"
            android:fontFamily="@font/materialdesignicons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#ff04786d"
            android:textColor="@android:color/white"
            android:text="@string/key_submit" />

    </LinearLayout>


    <WebView
        android:id="@+id/webview_component"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">
    </WebView>

    <LinearLayout
        android:id="@+id/browser_keyboard"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


    </LinearLayout>

</LinearLayout>